# git-writer

./: .gitignore  README.md  pyproject.toml  test_prototype.py
docs/: data_model.md  design.md  git_strategy.md  implementation.md
frontend/: vite.config.js
frontend/src/: App.css  App.jsx
git_writer/: cli.py  git_service.py  models.py  server.py
